# IoT_SaaS

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
docker_images/mlfow/: Dockerfile
drawings/: architecture.drawio  database.drawio  future_full_architecture.drawio  monitoring.drawio  security_layers.drawio  ui_design.drawio
src_analytics/: notes.md  pyproject.toml  requirements.txt
src_analytics/analytics/: utils.py
src_analytics/analytics/gear_vibration/: analysis.py  data_loader.py  model_trainer.py  models.py  visualization.py
src_analytics/notebooks/: gear_cnn.ipynb  gear_lstm.ipynb  gear_mlr.ipynb  gear_nn.ipynb  gear_svm.ipynb  gear_vibration_rfc.ipynb
src_analytics_api/: .env  analytics_api.md  pyproject.toml
src_analytics_api/analytics_api/: main.py
src_analytics_api/analytics_api/analysis/: gear_vibration.py
src_analytics_api/analytics_api/gls/: gls.py
src_analytics_api/analytics_api/graphql/: enums.py  schema.py
src_analytics_api/analytics_api/graphql/formatters/: metrics_formatter.py
src_analytics_api/analytics_api/graphql/types/: common.py  devices.py  metrics.py  ml.py
src_analytics_api/analytics_api/ml/: models.py
src_analytics_api/analytics_api/queries/: devices.py  metrics.py
src_analytics_api/analytics_api/routes/: home.py
src_analytics_api/analytics_api/utils/: timezone.py
src_analytics_api/models/gear_vibration/cnn/: cnn_w_128_v0.0.5.pkl  cnn_w_256_v0.0.4.pkl  cnn_w_512_v0.0.2.pkl  cnn_w_64_v0.0.6.pkl
src_analytics_api/models/gear_vibration/mulinomial_logistic_regression/: mlr_w_1024_v0.0.3.pkl  mlr_w_256_v0.0.2.pkl  mlr_w_512_v0.0.1.pkl  mlr_w_512_v0.0.2.pkl
src_analytics_api/models/gear_vibration/support_vector_machine/: svm-w-256-v0.0.1.pkl  svm_w_1024_v0.0.5.pkl  svm_w_256_v0.0.6.pkl  svm_w_512_v0.0.2.pkl  svm_w_512_v0.0.4.pkl  svm_w_512_v0.0.6.pkl
src_db_manager/: .env  Dockerfile
src_db_manager/db_manager/gls/: gls.py
src_device/: .env  pyproject.toml
src_device/edge_device/: device.py  main.py
src_device/edge_device/api/: grpc_client.py  http.py  ws_client.py
src_device/edge_device/disturbances/: disturbance.py
src_device/edge_device/gls/: const.py  gls.py  manager_gls.py
src_device/edge_device/sensors/: humidity.py  manager.py  sensor_simulator.py  temperature.py  vibration.py
src_device/edge_device/utils/: decorators.py
src_device/sensor_models/: humidity_model_v2.pkl  temperature_model_v2.pkl
src_device/src_db_manager/: pyproject.toml
src_device/src_db_manager/db_manager/: main.py
src_device/src_db_manager/db_manager/schemas/: devices.py  group_metrics.py  numeric_scalar_values.py  timescale.py
src_device/storage/: sensors.json
src_device_mgmt/: .env  pyproject.toml
src_device_mgmt/device_mgmt/: main.py  ws_manger.py
src_device_mgmt/device_mgmt/database/: device_queries.py
src_device_mgmt/device_mgmt/gls/: gls.py  ws_gls.py
src_device_mgmt/device_mgmt/routers/: devices.py  home.py  sensors.py  ws_endpoint.py
src_device_mgmt/device_mgmt/schemas/: http_request_schemas.py  http_response_schemas.py
src_hub/: .env  pyproject.toml
src_hub/hub/: buffer.py  main.py  processes.py
src_hub/hub/gls/: gls.py
src_hub/hub/queries/: devices.py  metrics.py
src_iot_libs/: proto.md  pyproject.toml
src_iot_libs/iot_libs/: logger.py  postgres.py
src_iot_libs/iot_libs/config/: logger_config.json
src_iot_libs/iot_libs/const/: edge_device.py
src_iot_libs/iot_libs/proto/: enums.py  hub.proto  hub_pb2.py  hub_pb2.pyi  hub_pb2_grpc.py
src_iot_libs/iot_libs/schemas/: websocket_schemas.py
utils/: start_services.bat  update_packages.bat
wiki/: device_mgmt_api.md  metric_router_api.md  sensors_types.md  setup.md
(+32 files in other folders)
